# templates

axum-lambda/: .editorconfig  Cargo.toml  Makefile  README.md
axum-lambda/src/: main.rs
readme-template/: README.md
vite-ts/: .eslintrc.cjs  README.md  package-lock.json  package.json
vite-ts/src/: main.tsx  routes.tsx
vite-ts/src/components/: layout.tsx  sidebar.tsx
vite-ts/src/modules/order/pages/: list.page.tsx
vite-ts/src/modules/product/pages/: list.page.tsx
vite-ts/src/pages/: home.page.tsx
