[package]
name = "axum-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = { version = "0.7.3", features = ["json"] }
http-body-util = "0.1.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
